--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+@layer utilities {
+  .no-spinner {
+    appearance: textfield;
+  }
+  .no-spinner::-webkit-inner-spin-button,
+  .no-spinner::-webkit-outer-spin-button {
+    appearance: none;
+    margin: 0;
+  }
+}
